# rich_tools

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codecov.yml  codeql-analysis.yml  test.yml
examples/: df_to_table.py  pandas_df_to_rich_table.py  rich_table_to_pandas_df.py  sample_input.csv  strip_markup_tags.py  table_from_csv.py  table_to_df.py  table_to_dicts.py
rich_tools/: __init__.py  table.py  text.py
tests/: test_rich_tools.py  test_table.py  test_text.py
