[tool.poetry]
name = "rich-tools"
version = "0.5.1"
description = "A python package with helpful tools when working with the rich python library."
authors = ["Avi Perl <avi@aviperl.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/avi-perl/rich_tools"
keywords = ["rich", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.8.0"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
